Modified API to ignore cookies (avoid XSS)

--- a/html/default/en/channel.html
+++ b/html/default/en/channel.html
@@ -6,7 +6,7 @@
  <script language="javascript" src="/_skin/jquery-1.7.2.min.js.gz"></script>
  <script language="javascript" src="/_skin/mutiny.js"></script>
  <script language="javascript">
-   var mutiny = Mutiny('', '%(network)s', '%(channel)s', 'mutiny');
+   var mutiny = Mutiny('', '%(network)s', '%(uids)s', '%(channel)s', 'mutiny');
  </script>
  <title>%(channel)s (mutiny %(version)s)</title>
 </head><body onLoad="mutiny.main($('body'));">
